<resources>
    <string name="app_name">EmployeeManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email Id</string>
    <string name="hint_password">Password</string>
    <string name="enteremail">Enter your email id</string>
    <string name="enterpassword">Enter your password</string>
    <string name="hint_profile">My Profile</string>
    <string name="hint_assignwork">Assign Work</string>
    <string name="hint_taskid">Task Id:</string>
    <string name="hint_assigndate">Assign Date:</string>
    <string name="hint_assigntask">Assigned Task:</string>
    <string name="hint_completiondate">Completion date:</string>
    <string name="hint_TaskList">Task List</string>
    <string name="dashboard">Dashboard</string>
    <string name="tasklist">All task list</string>
    <string name="profile">My Profile</string>
    <string name="basic_info">Basic Info</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="moile">Contact Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="joiningdate">Joining Date</string>
    <string name="status">Status</string>
</resources>
