<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <TextView
                android:id="@+id/taskTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_taskid"
                android:textSize="13sp"
                android:fontFamily="@font/proxima_nova_semi_bold"/>
            <TextView
                android:id="@+id/taskIdTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/taskTV"
                app:layout_constraintTop_toTopOf="@+id/taskTV"
                android:text=" "
                android:textSize="17sp"
                android:fontFamily="@font/proxima_nova_bold"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_assigndate"
                android:layout_marginTop="5dp"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/taskTV"
                android:fontFamily="@font/proxima_nova_semi_bold"/>
            <TextView
                android:id="@+id/dateValueTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/dateTV"
                app:layout_constraintTop_toTopOf="@+id/dateTV"
                android:text=" "
                android:textSize="13sp"
                android:fontFamily="@font/proxima_nova_bold"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/assiTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_assigntask"
                android:layout_marginTop="5dp"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/dateTV"
                android:fontFamily="@font/proxima_nova_semi_bold"/>
            <TextView
                android:id="@+id/assignTaskTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/assiTV"
                app:layout_constraintTop_toTopOf="@+id/assiTV"
                android:text=" "
                android:textSize="13sp"
                android:fontFamily="@font/proxima_nova_bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/completionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_completiondate"
                android:layout_marginTop="5dp"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/assiTV"
                android:fontFamily="@font/proxima_nova_semi_bold"/>
            <TextView
                android:id="@+id/completionDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/completionTV"
                app:layout_constraintTop_toTopOf="@+id/completionTV"
                android:text=" "
                android:textSize="13sp"
                android:fontFamily="@font/proxima_nova_bold"
                android:layout_marginLeft="10dp"/>


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>